Fix the horizontal scrolling again...

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,8 @@
-
 body {
   font-family: "Lato";
   text-align: center;
   font-size: 16px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
